@@ -253,7 +253,7 @@ class BaseWizard(object):
             # This is partially compatible with BIP45; assumes index=0
             default_derivation = "m/45'/0"
         else:
-            default_derivation = bip44_derivation_cointype(236, 0)
+            default_derivation = bip44_derivation_cointype(0, 0)
         self.derivation_dialog(f, default_derivation)
 
     def derivation_dialog(self, f, default_derivation):
@@ -261,11 +261,9 @@ class BaseWizard(object):
             _('Enter your wallet derivation here.  If you are not sure what this is, '
               'leave this field unchanged.\n'),
             _("The default value of {} is the default derivation for {} wallets.  "
-              "Note that some hardware wallets might complain if you do not use "
-              "BSV-specific addresses.\n").format(default_derivation, self.wallet_type),
-            _("To use BSV-specific addresses use m/44'/236'/0'"),
+              "This matches BTC wallet addresses and most other BSV wallet software.")
+            .format(default_derivation, self.wallet_type),
             _("To match BCH wallet addresses use m/44'/145'/0'"),
-            _("To match BTC wallet addresses, and some other BSV wallets, use m/44'/0'/0'"),
         ])
         self.line_dialog(run_next=f,
                          title=_('Derivation for {} wallet').format(self.wallet_type),
@@ -323,7 +321,7 @@ class BaseWizard(object):
 
     def on_restore_bip39(self, seed, passphrase):
         f = lambda x: self.run('on_bip44', seed, passphrase, str(x))
-        self.derivation_dialog(f, bip44_derivation_cointype(236, 0))
+        self.derivation_dialog(f, bip44_derivation_cointype(0, 0))
 
     def create_keystore(self, seed, passphrase):
         k = keystore.from_seed(seed, passphrase, self.wallet_type == 'multisig')
